partial(generic table)

--- a/app/src/app/pokedex-app.component.html
+++ b/app/src/app/pokedex-app.component.html
@@ -1,3 +1,9 @@
-<h1>Pokedex</h1>
+<div class="container mx-auto">
+    <h1>Pokedex</h1>
+    <app-pokemon-table></app-pokemon-table>
+    <router-outlet></router-outlet>
+</div>
 
-<router-outlet></router-outlet>
+
+
+
