--- a/app/src/app/pokemon-table/pokemon-table.component.html
+++ b/app/src/app/pokemon-table/pokemon-table.component.html
@@ -1,5 +1,5 @@
-<div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource">
+<div class="mat-elevation-z8 bg-transparent">
+    <table class="bg-transparent" mat-table [dataSource]="dataSource">
   
       <!-- ID Column -->
       <ng-container matColumnDef="id">
