--- a/app/src/app/pokedex-app.component.html
+++ b/app/src/app/pokedex-app.component.html
@@ -1,7 +1,9 @@
 <div class="container mx-auto">
-    <h1>Pokedex</h1>
+    <!-- <h1>Pokedex</h1> -->
+     <br/><br/>
     <app-pokemon-table></app-pokemon-table>
-    <router-outlet></router-outlet>
+    <br/><br/>
+    <!-- <router-outlet></router-outlet> -->
 </div>
 
 
