--- a/app/src/app/pokemon-table/pokemon-table.component.scss
+++ b/app/src/app/pokemon-table/pokemon-table.component.scss
@@ -1,3 +1,26 @@
 table {
     width: 100%;
   }
+
+  app-pokemon-table, table, tr, td {
+    background-color: rgba($color: #fff, $alpha: 0.5);
+  }
+
+  .mat-mdc-row .mat-mdc-cell {
+    border-bottom: 1px solid transparent;
+    border-top: 1px solid transparent;
+    cursor: pointer;
+  }
+  
+  .mat-mdc-row:hover .mat-mdc-cell {
+    border-color: currentColor;
+  }
+  
+  .demo-row-is-clicked {
+    font-weight: bold;
+  }
+
+  .bg-transparent, .bg-transparent > td {
+    background: none;
+  }
+  
