--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -5,3 +5,18 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+body {
+    font-family: 'Roboto';
+    background-image: url("/background.jpg"); 
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: black;
+
+}
+
+@media screen and (max-width: 900px) {
+	body{
+        background-image:  url("/background-mobile.jpg");;
+    }
+}
